Don't close transaction editor if no change in journal

When an account or category is changed while a transaction editor is
active, keep it open when there is no modification in the journalModel

BUG: 469587
FIXED-IN: 5.2